<resources>
    <string name="app_name">SchoolLibrary</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="regno">reg no</string>
    <string name="login">Log in</string>
    <string name="createaccount">Create account</string>
    <string name="error_message_emailnull">error</string>
</resources>
