<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:subtitle="Sign in"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S-Library"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textSize="40sp"/>








        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regno"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:background="@drawable/background_edittext"

                android:textColorHint="@color/colorAccent"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_passsword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:background="@drawable/background_edittext"

                android:textColorHint="@color/colorAccent"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:background="@drawable/background_edittext"
            android:text="@string/login" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:text="@string/createaccount" />


    </android.support.v7.widget.LinearLayoutCompat>
  
    </ScrollView>
</LinearLayout>
